[package]
name = "classic-computer-science-problems"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5.1"
bumpalo = { version = "3.11.1", features = ["boxed", "collections"] }
itertools = "0.10.5"
rand = "0.8.5"
